# flake8-plugin-utils

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
flake8_plugin_utils/: __init__.py  plugin.py
flake8_plugin_utils/utils/: __init__.py  _internal.py  assertions.py  constants.py  equiv_nodes.py
tests/: test_constants.py  test_equiv_nodes.py  test_flake8_plugin_utils.py
