[build-system]
requires = ["setuptools>=70.1"]
build-backend = "setuptools.build_meta"

[project]
name = "flake8-plugin-utils"
description = "The package provides base classes and utils for flake8 plugin writing"
version = "1.3.3.post1"
requires-python = ">=3.10, <4"
license = "MIT"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Afonasev Evgeniy", email = "ea.afonasev@gmail.com"},
]
maintainers = [
    {name = "stefan6419846"},
]
keywords = ["flake8", "plugin", "utils"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Software Development :: Quality Assurance",
    "Typing :: Typed"
]
dependencies = [
    "flake8",
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage[toml]",
    "flake8-bugbear",
    "isort",
    "mypy",
    "pep8-naming",
    "pytest",
    "pytest-cov",
    "pytest-deadfixtures",
    "pytest-mock",
    "types-flake8",
]

[project.urls]
Homepage = "https://github.com/stefan6419846/flake8-plugin-utils"
Releases = "https://github.com/stefan6419846/flake8-plugin-utils/releases"
Issues = "https://github.com/stefan6419846/flake8-plugin-utils/issues"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "flake8_plugin_utils",
]
namespaces = false

[tool.black]
line-length = 160

[tool.isort]
line_length = 160
known_first_party = ["flake8_plugin_utils"]
profile = "black"

[tool.mypy]
exclude = ["venv", "build"]
mypy_path = [".", "stubs"]

[tool.coverage.run]
branch = true
include = ["flake8_plugin_utils/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
